force-app/main/default/objects/Student__c/fields/Adhaar_card__c.field-meta.xml
<CustomField>
    <fullName>Adhaar_card__c</fullName>
    <label>Adhaar card</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>