force-app/main/default/objects/Student__c/fields/Course_Opted__c.field-meta.xml
<CustomField>
    <fullName>Course_Opted__c</fullName>
    <label>Course Opted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>MySql</fullName>
            </value>
            <value>
                <fullName>Aws</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>MongoDB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>