force-app/main/default/objects/Student__c/fields/Graduation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Percentage__c</fullName>
    <label>Graduation Percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>