force-app/main/default/objects/Student__c/fields/IntermediatePercentage__c.field-meta.xml
<CustomField>
    <fullName>IntermediatePercentage__c</fullName>
    <label>IntermediatePercentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>