force-app/main/default/objects/Student__c/fields/PercentageDifference__c.field-meta.xml
<CustomField>
    <fullName>PercentageDifference__c</fullName>
    <formula>ABS( Graduation_Percentage__c  -  IntermediatePercentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PercentageDifference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>