force-app/main/default/objects/Student__c/fields/Scholorship_Amnt__c.field-meta.xml
<CustomField>
    <fullName>Scholorship_Amnt__c</fullName>
    <label>Scholorship Amnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>