force-app/main/default/objects/Student__c/fields/Sum_Of_All_ratings__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_All_ratings__c</fullName>
    <label>Sum Of All ratings</label>
    <summarizedField>Ratings__c.Rating_Out_of_10__c</summarizedField>
    <summaryForeignKey>Ratings__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>