force-app/main/default/objects/Student__c/validationRules/Age_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Check</fullName>
    <active>false</active>
    <errorConditionFormula>Age__c   &lt;  20</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Age should be greater than 20 years</errorMessage>
</ValidationRule>