force-app/main/default/objects/Student__c/listViews/teamA_Student.listView-meta.xml
<ListView>
    <fullName>teamA_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>teamA</label>
    <queue>teamA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>